Add connection table to admin panel

--- a/GameOrder/templates/admin_panel/admin.html
+++ b/GameOrder/templates/admin_panel/admin.html
@@ -7,4 +7,5 @@
   <h2>Админ-Панель</h2>
   {% include 'admin_panel/user_table.html' %}
   {% include 'admin_panel/contacts_table.html' %}
+  {% include 'admin_panel/connections_table.html' %}
 {% endblock %}
