Add applications table to admin panel

--- a/GameOrder/templates/admin_panel/admin.html
+++ b/GameOrder/templates/admin_panel/admin.html
@@ -8,4 +8,5 @@
   {% include 'admin_panel/user_table.html' %}
   {% include 'admin_panel/contacts_table.html' %}
   {% include 'admin_panel/connections_table.html' %}
+  {% include 'admin_panel/applications_table.html' %}
 {% endblock %}
