Add last 3 tables to admin panel (genres, engines, languages)

--- a/GameOrder/templates/admin_panel/admin.html
+++ b/GameOrder/templates/admin_panel/admin.html
@@ -9,4 +9,7 @@
   {% include 'admin_panel/contacts_table.html' %}
   {% include 'admin_panel/connections_table.html' %}
   {% include 'admin_panel/applications_table.html' %}
+  {% include 'admin_panel/genres_table.html' %}
+  {% include 'admin_panel/engines_table.html' %}
+  {% include 'admin_panel/languages_table.html' %}
 {% endblock %}
